<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/concept_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/name"
        android:textColor="@color/black"
        android:text="@string/concept_name"
        android:textSize="20dp"
        android:layout_toEndOf="@id/concept_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/summary"
        android:textColor="@color/black"
        android:text="@string/concept_summary"
        android:layout_toEndOf="@id/concept_image"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/go_learn_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/summary"
        android:layout_toEndOf="@id/name"
        android:text="@string/learn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2B2727"
        android:layout_below="@id/go_learn_content"
        android:layout_marginTop="10dp"/>

</RelativeLayout>